k8s-manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
spec:
  type: NodePort
  selector:
    app: app-deploy
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
