k8s-manifests/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
