k8s-manifests/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: main-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # Basic auth for monitoring
    alb.ingress.kubernetes.io/auth-type: basic
    alb.ingress.kubernetes.io/auth-secret: monitoring-basic-auth

spec:
  rules:
  - http:
      paths:
      # --------------------
      # Grafana
      # --------------------
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80

      # --------------------
      # Prometheus
      # --------------------
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-prometheus
            port:
              number: 9090

      # --------------------
      # Alertmanager
      # --------------------
      - path: /alertmanager
        pathType: Prefix
        backend:
          service:
            name: monitoring-kube-prometheus-alertmanager
            port:
              number: 9093
